================================================================================
Changes since v13.01
================================================================================


--------------------------------------------------------------------------------
general


--------------------------------------------------------------------------------
basic


--------------------------------------------------------------------------------
basicGL

   Graphic Class
      1) The data type has been changed from String to Identifier for setColor(),
      getColorName(), the 'color' slot and the SET_COLOR event.
   
--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
gui-glut


--------------------------------------------------------------------------------
otw


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   Player Class
      1) The data type has been changed from String to Identifier for isName(),
      getName() and setName().

--------------------------------------------------------------------------------
vehicle


--------------------------------------------------------------------------------
